# fastapi-openapi-typescript

./: .gitignore  README.md  main.py  pyproject.toml
output/: api.d.ts  openapi.json
scripts/: export_openapi.py  openapi_to_ts.py
